--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
       uses: anchore/scan-action@v6
       with:
         image: $ECR_REPO_NAME:latest
-        fail-build: false
+        fail-build: true
         severity-cutoff: high
         output-format: table
     - name: Push Docker image to ECR
